* /60_umc-system/24_umc-service-create-group:   test group creation, modification and deletion via UMC (Bug #34792)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50339 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-7) unstable; urgency=low
+
+  * /60_umc-system/24_umc-service-create-group:
+    test group creation, modification and deletion via UMC (Bug #34792)
+
+ -- Dmitry Galkin <galkin@univention.de>  Fri, 16 May 2014 14:46:38 +0200
+
 ucs-test (4.0.166-6) unstable; urgency=low
 
   * /60_umc-system/23_umc-service-create-user:
