--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-8) unstable; urgency=low
+
+  * 52_s4connector/s4connector.py: import sys (Bug #31324)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 17 May 2014 15:16:49 +0200
+
 ucs-test (4.0.166-7) unstable; urgency=low
 
   * /60_umc-system/24_umc-service-create-group:
