--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.20-1) unstable; urgency=low
+
+  * Increase EC2 connection timeout (Bug #34866)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 19 May 2014 10:45:42 +0200
+
 ucs-ec2-tools (0.1.19-1) unstable; urgency=low
 
   * Bug #26137: added utils-local.sh
