Bug #34596, Bug #34597 test: user with many groups
/bin/ps SEGVs
NFS cd hangs.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50389 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-9) unstable; urgency=low
+
+  * 49nfs/10many-groups: check user with many groups (Bug #34596, Bug #34597)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 19 May 2014 14:43:13 +0200
+
 ucs-test (4.0.166-8) unstable; urgency=low
 
   * 52_s4connector/s4connector.py: import sys (Bug #31324)
