--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-10) unstable; urgency=low
+
+  * 49nfs/10many-groups: fix user with many groups (Bug #34596, Bug #34597)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 20 May 2014 08:45:05 +0200
+
 ucs-test (4.0.166-9) unstable; urgency=low
 
   * 49nfs/10many-groups: check user with many groups (Bug #34596, Bug #34597)
