* /60_umc-system/50_umc-service-quotas-management:     test quota management via UMC (Bug #34625)   * /60_umc-system/TestUMCSystemModule.py:     refactored query request methods
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50463 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,12 @@
+ucs-test (4.0.166-11) unstable; urgency=low
+
+  * /60_umc-system/50_umc-service-quotas-management:
+    test quota management via UMC (Bug #34625)
+  * /60_umc-system/TestUMCSystemModule.py:
+    refactored query request methods
+
+ -- Dmitry Galkin <galkin@univention.de>  Tue, 20 May 2014 17:00:46 +0200
+
 ucs-test (4.0.166-10) unstable; urgency=low
 
   * 49nfs/10many-groups: fix user with many groups (Bug #34596, Bug #34597)
