* rewrote /00_base/90change_user_pwd_via_udm test to use UMC commands   (Bug #13356)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50541 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-12) unstable; urgency=low
+
+  * rewrote /00_base/90change_user_pwd_via_udm test to use UMC commands
+    (Bug #13356)
+
+ -- Drees Dormann <dormann@univention.de>  Thu, 22 May 2014 12:16:51 +0200
+
 ucs-test (4.0.166-11) unstable; urgency=low
 
   * /60_umc-system/50_umc-service-quotas-management:
