Bug #34835 Listener: use same_dn()
Introduce common function to test DN for equality.
As a first implementation use strcasecmp() which is known for not
correctly handling all cases.
See test cases for known-broken cases.

Add test case for difference in DN case.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50552 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.0-11) unstable; urgency=low
+
+  * Ignore case in DN (Bug #34835)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 22 May 2014 14:14:46 +0200
+
 univention-directory-listener (8.0.0-10) unstable; urgency=low
 
   * Fix handling of binary attributes (Bug #34355)
