--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.1-3) unstable; urgency=low
+
+  * Fix inverted same_dn() (Bug #34835)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 22 May 2014 15:47:47 +0200
+
 univention-directory-listener (8.0.1-2) unstable; urgency=low
 
   * Ignore case in DN (Bug #34835)
