--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.1-4) unstable; urgency=low
+
+  * Fix force delold on MOD-RDN (Bug #34802)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 23 May 2014 14:34:11 +0200
+
 univention-directory-listener (8.0.1-3) unstable; urgency=low
 
   * Fix inverted same_dn() (Bug #34835)
