Bug #34835 Listener: Ignore case when comparing DNs for moves
Use same_dn() also for detecting final move.

Prefer the DN from LDAP instead of the Notifier, as the Notifier DN is
fully user controlled and may differ in case. As it is used to populate
the missing RDN attributes this might add the attributes with the wrong
case.


git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50650 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,6 +1,7 @@
 univention-directory-listener (8.0.1-4) unstable; urgency=low
 
   * Fix force delold on MOD-RDN (Bug #34802)
+  * Ignore case when comparing DNs for moves (Bug #34835)
 
  -- Philipp Hahn <hahn@univention.de>  Fri, 23 May 2014 14:34:11 +0200
 
