* Bug #34965: allow execution of a multi action even though selected items   cannot be executed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50666 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-26) unstable; urgency=low
+
+  * Bug #34965: allow execution of a multi action even though selected items
+    cannot be executed
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 26 May 2014 13:00:09 +0200
+
 univention-management-console-frontend (3.0.152-25) unstable; urgency=low
 
   * Bug #33990: update to Dojo 1.9.3; fix detection of IE11
