--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-13) unstable; urgency=medium
+
+  * Add 51_samba4/55dns_update for Bug #34868
+
+ -- Arvid Requate <requate@univention.de>  Mon, 26 May 2014 13:57:09 +0200
+
 ucs-test (4.0.166-12) unstable; urgency=low
 
   * rewrote /00_base/90change_user_pwd_via_udm test to use UMC commands
