Bug #34835 Listener: Change collision message to level INFO
Currently we see the following unexplained behaviour:
> notifier returned  id:538  dn:uid=m0hpxim7,cn=users,dc=phahn,dc=dev  cmd:r
> notifier returned  id:539  dn:uid=m0hpxim7,cn=users,dc=phahn,dc=dev  cmd:a

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50686 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.1-5) unstable; urgency=low
+
+  * Change collision message to level INFO (Bug #34835)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 26 May 2014 15:38:51 +0200
+
 univention-directory-listener (8.0.1-4) unstable; urgency=low
 
   * Fix force delold on MOD-RDN (Bug #34802)
