--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-15) unstable; urgency=low
+
+  * 10_ldap/42replication_uppercase: Test case for Bug #34835
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 27 May 2014 07:57:37 +0200
+
 ucs-test (4.0.166-14) unstable; urgency=medium
 
   * Fix lib include (Bug #34868)
