Bug #34835, Bug #34802 Listener: Merge 8.0.1-12..15 from UCS-3.2-2
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50686 1b283449-9f2f-0410-b571-8eb228e1a901
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50650 1b283449-9f2f-0410-b571-8eb228e1a901
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50649 1b283449-9f2f-0410-b571-8eb228e1a901
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50648 1b283449-9f2f-0410-b571-8eb228e1a901
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50564 1b283449-9f2f-0410-b571-8eb228e1a901
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50557 1b283449-9f2f-0410-b571-8eb228e1a901
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50556 1b283449-9f2f-0410-b571-8eb228e1a901
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50552 1b283449-9f2f-0410-b571-8eb228e1a901
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50551 1b283449-9f2f-0410-b571-8eb228e1a901
git-svn-id: svn+ssh://billy.knut.univention.de/var/svn/dev@50550 1b283449-9f2f-0410-b571-8eb228e1a901


git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@50697 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.0-12) unstable; urgency=low
+
+  * Merge 8.0.1-12..15 from UCS-3.2-2 (Bug #34835, Bug #34802)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 26 May 2014 15:38:51 +0200
+
 univention-directory-listener (8.0.0-11) unstable; urgency=low
 
   * Ignore case while comparing DNs. Otherwise a modification is
