--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-20) unstable; urgency=medium
+
+  * Use the new rsync --dirs-update option in sysvol-sync.sh (Bug #33751)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 27 May 2014 15:45:56 +0200
+
 univention-samba4 (3.0.39-19) unstable; urgency=low
 
   * Added univention-samba4-backup (Bug #34113) 
