* Bug #31277: enable possibility to configure the root (/) partition
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50721 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (8.0.6-2) unstable; urgency=low
+
+  * Bug #31277: enable possibility to configure the root (/) partition
+
+ -- Florian Best <best@univention.de>  Tue, 27 May 2014 15:46:02 +0200
+
 univention-quota (8.0.6-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
