--- a/base/univention-python/debian/changelog
+++ b/base/univention-python/debian/changelog
@@ -1,3 +1,9 @@
+univention-python (7.0.4-1) unstable; urgency=low
+
+  * Delete old RDN on rename (Bug #34971)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 26 May 2014 11:37:46 +0200
+
 univention-python (7.0.3-4) unstable; urgency=low
 
   * Set the default for ldap/client/retry/count to 10 (Bug #34292)
