Bug #34833 Listener: Fix move via temporary container
For move operations create any missing intermediate container. Otherwise
the Listener switches to failed-LDIF-mode, as the operation fails when
the target container is missing.

Create fake container for moves if already missing on master.

Add test case.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50742 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.2-1) unstable; urgency=low
+
+  * Handle move to intermediate containers (Bug #34833)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 27 May 2014 16:56:50 +0200
+
 univention-directory-listener (8.0.1-5) unstable; urgency=low
 
   * Change collision message to level INFO (Bug #34835)
