--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-18) unstable; urgency=low
+
+  * 51_samba4/54ntp_permissions: switch to safe (Bug #31809)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 30 May 2014 08:17:51 +0200
+
 ucs-test (4.0.166-17) unstable; urgency=low
 
   * lib/samba.sh: increase the drs timeout from 60 to 360 seconds. In my
