--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-19) unstable; urgency=low
+
+  * 51_samba4/44kerberos_access_sysvol: include samba.sh (Bug #32315)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 30 May 2014 08:21:27 +0200
+
 ucs-test (4.0.166-18) unstable; urgency=low
 
   * 51_samba4/54ntp_permissions: switch to safe (Bug #31809)
