* More DRS replication timeout related updates (Bug #35012)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50765 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-20) unstable; urgency=low
+
+  * More DRS replication timeout related updates (Bug #35012)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 30 May 2014 09:45:23 +0200
+
 ucs-test (4.0.166-19) unstable; urgency=low
 
   * 51_samba4/44kerberos_access_sysvol: include samba.sh (Bug #32315)
