* Bug #34243: reload modules on modules/list command
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50771 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.24-4) unstable; urgency=low
+
+  * Bug #34243: reload modules on modules/list command
+
+ -- Florian Best <best@univention.de>  Fri, 30 May 2014 13:39:20 +0200
+
 univention-management-console (6.0.24-3) unstable; urgency=low
 
   * Bug #33622: also allow message header to be send in chunks
