--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-27) unstable; urgency=low
+
+  * Bug #34243: add app.reloadModules() to reload modules on the fly without
+  	relogin.
+
+ -- Florian Best <best@univention.de>  Fri, 30 May 2014 13:40:27 +0200
+
 univention-management-console-frontend (3.0.152-26) unstable; urgency=low
 
   * Bug #34965: allow execution of a multi action even though selected items
