* Bug #34867: Remove radius component. It was added by mistake as univention-radius is part of the main repository.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50853 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.51-17) unstable; urgency=low
+
+  * Bug #34867: Remove radius component. It was added by mistake as
+    univention-radius is part of the main repository.
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 03 Jun 2014 17:35:43 +0200
+
 univention-management-console-module-appcenter (3.0.51-16) unstable; urgency=low
 
   * Bug #32935: Do not download all missing files from the App Center server
