* Preserve /var/lib/samba/*, only clear private subdir before join   (Bug #35000)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50857 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-21) unstable; urgency=medium
+
+  * Preserve /var/lib/samba/*, only clear private subdir before join
+    (Bug #35000)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 03 Jun 2014 18:03:28 +0200
+
 univention-samba4 (3.0.39-20) unstable; urgency=medium
 
   * Use the new rsync --dirs-update option in sysvol-sync.sh (Bug #33751)
