--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-22) unstable; urgency=medium
+
+  * Also clean up /var/lib/samba/private before new provision
+    (Bug #32246)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 03 Jun 2014 18:06:32 +0200
+
 univention-samba4 (3.0.39-21) unstable; urgency=medium
 
   * Preserve /var/lib/samba/*, only clear private subdir before join
