--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-22) unstable; urgency=low
+
+  * 51_samba4/41samba-tool_user_password_change: use the previous
+    version to change the password via kkpasswd (Bug #35012)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 04 Jun 2014 06:25:09 +0200
+
 ucs-test (4.0.166-21) unstable; urgency=low
 
   * 60_umc-system/60_umc-service-extended-attributes:
