--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (7.0.0-11) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #35060).
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Thu, 05 Jun 2014 12:39:44 +0200
+
 univention-kernel-image (7.0.0-10) unstable; urgency=low
 
   * Update to the latest kernel build (Bug #34002).
