* 00_base/07kpasswd_output: set exposure back to dangerous(Bug #30750)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50903 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-23) unstable; urgency=low
+
+  * 00_base/07kpasswd_output: set exposure back to dangerous(Bug #30750)
+
+ -- Drees Dormann <dormann@univention.de>  Thu, 05 Jun 2014 16:16:04 +0200
+
 ucs-test (4.0.166-22) unstable; urgency=low
 
   * 51_samba4/41samba-tool_user_password_change: use the previous
