--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.51-18) unstable; urgency=low
+
+  * Bug #31915: Reload app after install/upgrade/uninstall
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 06 Jun 2014 09:23:59 +0200
+
 univention-management-console-module-appcenter (3.0.51-17) unstable; urgency=low
 
   * Bug #34867: Remove radius component. It was added by mistake as
