--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-25) unstable; urgency=low
+
+  * Bug #35098: added UCSTestDomainAdminCredentials() to utils.py
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 11 Jun 2014 09:10:46 +0200
+
 ucs-test (4.0.166-24) unstable; urgency=low
 
   * in certain tests, do not create objects below
