--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,13 @@
+ucs-test (4.0.166-27) unstable; urgency=low
+
+  * 20_appcenter/43_installed_apps
+  	-fixed typo
+  	-removed unused variable
+  	-adapted test to new Packages.gz structure
+  	(Bug #31792)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 11 Jun 2014 12:08:47 +0200
+
 ucs-test (4.0.166-26) unstable; urgency=low
 
   * Bug #35102: added mail.py
