* Update to Firefox 24.6 ESR (Bug #34703)   * Remove dependency on icedtea-plugin, scheduled for removal
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50984 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/firefox-de/debian/changelog
+++ b/desktop/firefox-de/debian/changelog
@@ -1,3 +1,10 @@
+firefox-en (1:24.6.0esr-1) unstable; urgency=low
+
+  * Update to Firefox 24.6 ESR (Bug #34703)
+  * Remove dependency on icedtea-plugin, scheduled for removal
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Wed, 11 Jun 2014 12:25:15 +0200
+
 firefox-de (1:24.4.0esr-6) unstable; urgency=low
 
   * Update to Firefox 24.4 ESR (Bug #34366)
