--- a/desktop/firefox-de/debian/changelog
+++ b/desktop/firefox-de/debian/changelog
@@ -1,4 +1,4 @@
-firefox-en (1:24.6.0esr-1) unstable; urgency=low
+firefox-de (1:24.6.0esr-1) unstable; urgency=low
 
   * Update to Firefox 24.6 ESR (Bug #34703)
   * Remove dependency on icedtea-plugin, scheduled for removal
