--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,10 +1,13 @@
+ucs-test (4.0.166-28) unstable; urgency=low
+
+  * version bump (Bug #31792)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 11 Jun 2014 12:35:06 +0200
+
 ucs-test (4.0.166-27) unstable; urgency=low
 
-  * 20_appcenter/43_installed_apps
-  	-fixed typo
-  	-removed unused variable
-  	-adapted test to new Packages.gz structure
-  	(Bug #31792)
+  * Bug #31792: 20_appcenter/43_installed_apps - fixed typo, removed unused variable,
+  	adapted test to new Packages.gz structure
 
  -- Drees Dormann <dormann@univention.de>  Wed, 11 Jun 2014 12:08:47 +0200
 
