--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.76-2) unstable; urgency=low
+
+  * fixed traceback which could occur when removing all nagios services/parents
+    from computer object (Bug #33120, Bug #34037)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 11 Jun 2014 13:37:42 +0200
+
 univention-directory-manager-modules (9.0.76-1) unstable; urgency=low
 
   * Try to re-create the cli-server socket if the first creation failed
