* Bug #34243: don't render the overview page again in app.reloadModules()
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50999 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-28) unstable; urgency=low
+
+  * Bug #34243: don't render the overview page again in app.reloadModules()
+
+ -- Florian Best <best@univention.de>  Wed, 11 Jun 2014 16:36:54 +0200
+
 univention-management-console-frontend (3.0.152-27) unstable; urgency=low
 
   * Bug #34243: add app.reloadModules() to reload modules on the fly without
