* Bug #34243: fix a UMC server crash which happens when opening a module which XML module definition was removed and e.g. a umc-server reload was triggered. * don't trigger umc_frontend_new_hash and umc-server reload when (un)installing a new UMC module
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51000 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -3,6 +3,8 @@ univention-management-console (6.0.24-5) unstable; urgency=low
   * Bug #34243: fix a UMC server crash which happens when opening a module
   	which XML module definition was removed and e.g. a umc-server reload
   	was triggered.
+  * don't trigger umc_frontend_new_hash and umc-server reload when (un)installing
+  	a new UMC module
 
  -- Florian Best <best@univention.de>  Wed, 11 Jun 2014 13:59:55 +0200
 
