* 51_samba4/52replication_sysvol: check permission of synced GPO   (Bug #35105)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51005 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-29) unstable; urgency=low
+
+  * 51_samba4/52replication_sysvol: check permission of synced GPO
+    (Bug #35105)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 11 Jun 2014 20:19:26 +0200
+
 ucs-test (4.0.166-28) unstable; urgency=low
 
   * version bump (Bug #31792)
