--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-30) unstable; urgency=low
+
+  * Bug #34288: fixup for network.py: DNAT to 127/8 is not allowed
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 12 Jun 2014 09:14:25 +0200
+
 ucs-test (4.0.166-29) unstable; urgency=low
 
   * 51_samba4/52replication_sysvol: check permission of synced GPO
