* Bug #34243: move reload of UMC modules into lib/server
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51012 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.51-19) unstable; urgency=low
+
+  * Bug #34243: move reload of UMC modules into lib/server
+
+ -- Florian Best <best@univention.de>  Thu, 12 Jun 2014 10:09:54 +0200
+
 univention-management-console-module-appcenter (3.0.51-18) unstable; urgency=low
 
   * Bug #31915: Reload app after install/upgrade/uninstall
