* Bug #34243: reload UMC modules when user cancels the UMC restart notification
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51013 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-lib/debian/changelog
+++ b/management/univention-management-console-module-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-lib (3.0.7-2) unstable; urgency=low
+
+  * Bug #34243: reload UMC modules when user cancels the UMC restart
+  	notification
+
+ -- Florian Best <best@univention.de>  Thu, 12 Jun 2014 11:06:21 +0200
+
 univention-management-console-module-lib (3.0.7-1) unstable; urgency=low
 
   * Bug #24422: 
