* Bug #34243: fix error when reloading modules if new categories exists
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51028 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-30) unstable; urgency=low
+
+  * Bug #34243: fix error when reloading modules if new categories exists
+
+ -- Florian Best <best@univention.de>  Fri, 13 Jun 2014 09:30:41 +0200
+
 univention-management-console-frontend (3.0.152-29) unstable; urgency=low
 
   * Bug #34243: don't render the overview page again in app.reloadModules()
