univention-system-setup (7.0.69-8) unstable; urgency=low
  * instead of reading setup script output from pipe, directly write it to the
    setup log to prevent running setup scripts from receiving SIGPIPE when
    the module process terminates unexpectedly (Bug #34105)


univention-management-console (6.0.24-6) unstable; urgency=low

  * don't let UMC module processes die by timeout if the time delta seems to be
    unnatural (e.g. due to huge jumps in wall-clock time through NTP updates)
    (Bug #34105)
  * fixed minor typo in log output



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51039 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (7.0.69-8) unstable; urgency=low
+
+  * instead of reading setup script output from pipe, directly write it to the
+    setup log to prevent running setup scripts from receiving SIGPIPE when
+    the module process terminates unexpectedly (Bug #34105)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 13 Jun 2014 12:10:45 +0200
+
 univention-system-setup (7.0.69-7) unstable; urgency=low
 
   * Add Firefox addon that hides the tab bar. This is necessary for the
