--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test (4.0.166-31) unstable; urgency=low
+
+  *  60_umc-system/70_umc-service-network-functionality: a test
+     to check the network functionality (Bug #34622)
+  *  60_umc-system/TestUMCSystemModule.py: test class extension
+
+ -- Dmitry Galkin <galkin@univention.de>  Fri, 13 Jun 2014 12:47:01 +0200
+
 ucs-test (4.0.166-30) unstable; urgency=low
 
   * Bug #34288: fixup for network.py: DNAT to 127/8 is not allowed
