* Moved input field 'Organisation' from 'Personal Information' to 'Organisation' (Bug #28630)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51048 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,11 @@
+univention-directory-manager-modules (9.0.77-1) unstable; urgency=low
+
+  * Moved input field 'Organisation' from 'Personal Information' to
+    'Organisation'
+    (Bug #28630)
+
+ -- Alexander Kramer <kramer@univention.de>  Fri, 13 Jun 2014 14:02:09 +0200
+
 univention-directory-manager-modules (9.0.76-3) unstable; urgency=low
 
   * Bug #34200: Add documentation for new UCR variables to configure name in
