* Bug #34243: fix error when reloading modules if new categories exists
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51052 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-32) unstable; urgency=low
+
+  * Bug #34243: fix error when reloading modules if new categories exists
+
+ -- Florian Best <best@univention.de>  Fri, 13 Jun 2014 15:00:26 +0200
+
 univention-management-console-frontend (3.0.152-31) unstable; urgency=low
 
   * Bug #34317: set default link to UMC on UCS overview page
