--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.25-3) unstable; urgency=low
+
+  * Bug #25196: fix typos
+
+ -- Florian Best <best@univention.de>  Fri, 13 Jun 2014 16:44:51 +0200
+
 univention-management-console (6.0.25-2) unstable; urgency=low
 
   * Bug #34243: revert removal of umc_frontend_new_hash
