* Fix UNIVENTION_NTP nagios check to use check_ntp_time (Bug #34570)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51073 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.6-4) unstable; urgency=low
+
+  * Fix UNIVENTION_NTP nagios check to use check_ntp_time (Bug #34570)
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 16 Jun 2014 09:56:05 +0200
+
 univention-nagios (7.0.6-3) unstable; urgency=low
 
   * Bug #34570: Change UNIVENTION_NTP nagios check to compare ntp server
