univention-management-console (6.0.25-5) unstable; urgency=low
  * use a 1sec timer function reducing the remaining time until timeout by 1 in
    each iteration if there are no active requests to be time leap independent
    (Bug #34105)


univention-system-setup (7.0.69-9) unstable; urgency=low

  * do not announce successfull request processing before the request was
    actually processed (Bug #34105)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51088 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-9) unstable; urgency=low
+
+  * do not announce successfull request processing before the request was
+    actually processed (Bug #34105)
+
+ -- Lukas Walter <walter@univention.de>  Mon, 16 Jun 2014 16:02:28 +0200
+
 univention-system-setup (7.0.69-8) unstable; urgency=low
 
   * instead of reading setup script output from pipe, directly write it to the
