Bug #35098: removed dead code
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51091 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-32) unstable; urgency=low
+
+  * Bug #35098: removed dead code
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 16 Jun 2014 16:35:26 +0200
+
 ucs-test (4.0.166-31) unstable; urgency=low
 
   *  60_umc-system/70_umc-service-network-functionality: a test
