--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.17-1) unstable; urgency=low
+
+  * Added samba/acl/allow/execute/always (Bug #33785) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 17 Jun 2014 12:08:42 +0200
+
 univention-samba (8.0.16-1) unstable; urgency=medium
 
   * Fix handling of samba/global/options/.*  (Bug #28722)
