Bug #35102: stop mailsink after usage
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51110 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-34) unstable; urgency=low
+
+  * Bug #35102: stop mailsink after usage
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 17 Jun 2014 12:04:02 +0200
+
 ucs-test (4.0.166-33) unstable; urgency=low
 
   * Bug #35134: fixup for network.py: make redirection to be more reliable
