--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.18-3) unstable; urgency=low
+
+  * Added samba/acl/allow/execute/always (Bug #33785) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 17 Jun 2014 12:46:43 +0200
+
 univention-samba (8.0.18-2) unstable; urgency=low
 
   * Added samba/acl/allow/execute/always (Bug #33785) 
