Added samba/acl/allow/execute/always (Bug #33785)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51115 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-24) unstable; urgency=low
+
+  * Added samba/acl/allow/execute/always (Bug #33785) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 17 Jun 2014 12:45:54 +0200
+
 univention-samba4 (3.0.39-23) unstable; urgency=medium
 
   * Save and restore rIDNextRID during re-join and re-provision if possible
